--- a/dt/registration-04/index-04.html
+++ b/dt/registration-04/index-04.html
@@ -17,7 +17,15 @@
     <li><a href="file/rounding-borders-and-backgrounds-in-CSS-55.html">55. Скругление границ и фона на CSS</a></li>
     <li><a href="file/rounding-for-different-CSS-corners-56.html">56. Скругления для разных углов CSS</a></li>
     <li><a href="file/rounded-corners-as-a-percentage-on-CSS-57.html">57. Скругленные уголки в процентах на CSS</a></li>
-    <li><a href="file/background-images-58.html">58. Фоновые картинки</a></li>
+    <li><a href="file/background-images-58/">58. Фон на css</a>
+      <ul>
+        <li><a href="file/background-images-58/background-images-58-0.html">background-images-58-0(example)</a></li>
+        <li><a href="file/background-images-58/background-images-58-1.html">background-images-58-1(task-1)</a></li>
+        <li><a href="file/background-repeat-58/background-repeat-58-2.html">background-repeat-58-2(task-2)</a></li>
+        <li><a href="file/background-repeat-58/background-repeat-58-3.html">background-repeat-58-3(task-3)</a></li>
+        <li><a href="file/background-position-58/background-position-58-4.html">background-position-58-4(example)</a></li>
+      </ul>
+    </li>
     <li><a href="file/list-markers(ul)-59.html">59. Маркеры списков(ul)</a></li>
     <li><a href="file/list-markers(ol)-60.html">60. Маркеры списков(ol)</a></li>
   </ul>
