разное expert dt

--- a/dt/block-model-05/index-05.html
+++ b/dt/block-model-05/index-05.html
@@ -18,6 +18,7 @@
     <li><a href="file/expansion-of-elements-67.html">67. Расширение элементов</a></li>
     <li><a href="file/features-of-block-elements-in-CSS-68.html">68. Особенности блочных элементов в CSS</a></li>
     <li><a href="file/features-of-lowercase-elements-in-CSS-69.html">69. Особенности строчных элементов в CSS</a></li>
+    <li><a href="file/alignment-of-flex-elements-77.html">77. Выравнивание flex элементов</a></li>
   </ul>
 </body>
 </html>
