--- a/dt/layouts-09/file/creating-a-menu-108.html
+++ b/dt/layouts-09/file/creating-a-menu-108.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>108. Создание меню</title>
+  <link rel="stylesheet" href="../css/creating-menu-108.css">
 </head>
 <body>
+  <div><a href="../index -09.html">index-09.html</a></div>
   <h1>108. Создание меню</h1>
+  <h2>Example 1</h2>
+  <div id="menu">
+    <a href="#">link text 1</a>
+    <a href="#" class="active">link text 2</a>
+    <a href="#">link text 3</a>
+    <a href="#">link text 4</a>
+    <a href="#">link text 5</a>
+  </div>
+  <h2>Task-1</h2>
+
 </body>
 </html>
