--- a/expert/html2/mod2/selectors/7-3_pseudo-class.html
+++ b/expert/html2/mod2/selectors/7-3_pseudo-class.html
@@ -9,12 +9,11 @@ div{
 }
 /*:nth-child*/
 li:nth-child(even){
-	background: darkgrey;
+	background: lightslategray;
 }
-
-
 </style>
 </head>
+
 <body>
 	<ul>
 	 <li> Пункт списка </li>
