--- a/expert/html2/mod2/selectors/8_selectors_combain.html
+++ b/expert/html2/mod2/selectors/8_selectors_combain.html
@@ -5,10 +5,10 @@
 <title>Комбинации селекторов</title>
 <style type="text/css">
 
-/*Контекстный селектор - предки-потомки
+/* Контекстный селектор - предки-потомки */
 div strong{color:#0f0;}
 td td{}
-*/
+
 
 /*Дочерний селектор - родитель-ребенок
 div > strong{color:#0f0;}
