--- a/expert/html2/mod2/selectors/1-3_tag_id.html
+++ b/expert/html2/mod2/selectors/1-3_tag_id.html
@@ -4,7 +4,8 @@
 <meta charset="utf-8">
 <title>Селекторы тэгов, id, универсальный селектор</title>
 <style type="text/css">
-
+	/* *{color: red;} */
+	/* p{color: red;} */
 </style>
 </head>
 <body>
