--- a/dt/layouts-09/index -09.html
+++ b/dt/layouts-09/index -09.html
@@ -10,6 +10,9 @@
   <h1>Макеты(layouts) 108-115</h1>
   <ul>
     <li><a href="file/creating-a-menu-108.html">108. Создание меню</a></li>
+    <li><a href="file/creating-a-menu-task1.html">108.1. Creating-a-menu-task1</a></li>
+    <li><a href="file/creating-a-menu-task2.html">108.2. creating-a-menu-task2</a></li>
+    <li><a href="file/creating-a-menu-task3.html">108.3. creating-a-menu-task3</a></li>
   </ul>
 </body>
 </html>
