--- a/dt/block-model-05/file/features-of-block-elements-in-CSS-68.html
+++ b/dt/block-model-05/file/features-of-block-elements-in-CSS-68.html
@@ -44,7 +44,7 @@
 
   <h2>Ширина и высота блочного элемента</h2>
   <p>
-    Если блочному элементу можно задать ширину и высоту:
+    Блочному элементу можно задать <b>ширину</b> и <b>высоту</b>:
   </p>
   <div id="block-2">text</div>
 
