--- a/dt/block-model-05/index-05.html
+++ b/dt/block-model-05/index-05.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Блочная модель(61-77).</title>
 </head>
+
 <body>
   <h1>Блочная модель</h1>
   <ul>
@@ -18,7 +18,9 @@
     <li><a href="file/expansion-of-elements-67.html">67. Расширение элементов</a></li>
     <li><a href="file/features-of-block-elements-in-CSS-68.html">68. Особенности блочных элементов в CSS</a></li>
     <li><a href="file/features-of-lowercase-elements-in-CSS-69.html">69. Особенности строчных элементов в CSS</a></li>
+    <li><a href="file/defining-a-block-tag-model-70.html">70. Определение блочной модели тегов</a></li>
     <li><a href="file/alignment-of-flex-elements-77.html">77. Выравнивание flex элементов</a></li>
   </ul>
 </body>
+
 </html>
