--- a/dt/block-model-05/file/expansion-of-elements-67.html
+++ b/dt/block-model-05/file/expansion-of-elements-67.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,20 @@
   <title>67. Расширение элементов</title>
   <link rel="stylesheet" href="../css/expansion-of-elements-67.css">
 </head>
+
 <body>
   <a href="../index-05.html">index-05.html(block-model-05)</a>
   <h1>Работа с отступами padding на css</h1>
 
   <h2>Влияние отступа(padding)</h2>
   <p>
-    Пусть некоторому элементу мы задали ширину 100px. В CSS это отнюдь не означает, что элемент действительно будет шириной в 100px. Дело в том, что добавление padding расширяет элемент и он становится больше, чем указано в свойстве width.
+    Пусть некоторому элементу мы задали ширину 100px. В CSS это отнюдь не означает, что элемент действительно будет
+    шириной в 100px. Дело в том, что добавление padding расширяет элемент и он становится больше, чем указано в свойстве
+    width.
   </p>
   <p>
-    Давайте посмотрим на примере. Сделаем два блока, которым зададим ширину 100 пикселей. При этом второму блоку зададим padding, а первому - нет. В результате второй блок будет больше на размер отступа:
+    Давайте посмотрим на примере. Сделаем два блока, которым зададим ширину 100 пикселей. При этом второму блоку зададим
+    padding, а первому - нет. В результате второй блок будет больше на размер отступа:
   </p>
   <div id="elem1"></div>
   <p>второй блок (padding: 25px;)</p>
@@ -40,11 +45,13 @@
 
   <h2>Как избавиться от расширения(box-size: border-box;).</h2>
   <p>
-    Как правило, описанное расширение вредное и вам хотелось бы от него избавиться. Для этого в CSS есть свойство box-sizing. Если указать ему значение border-box, то ни padding, ни граница не будут расширять блок:
+    Как правило, описанное расширение вредное и вам хотелось бы от него избавиться. Для этого в CSS есть свойство
+    box-sizing. Если указать ему значение border-box, то ни padding, ни граница не будут расширять блок:
   </p>
   <div id="elem7"></div>
   <p>отступ(padding) 30px, граница(border) 10px.</p>
   <p>box-sizing: border-box;</p>
   <div id="elem8"></div>
 </body>
+
 </html>
