DT task 4 и проба ветвления

--- a/dt/block-model-05/file/defining-a-block-tag-model-70.html
+++ b/dt/block-model-05/file/defining-a-block-tag-model-70.html
@@ -87,7 +87,7 @@
       <p>2.3. Если у строчных элементов нет содержимого, то он тоже схлопнется(border-left + border-right):</p>
       <b class="task"></b>
       
-      <h3>3. Определите, к какой блочной модели относятся теги h2.</h3>
+    <h3>3. Определите, к какой блочной модели относятся теги h2.</h3>
       <p>Если элемент блочный, то ему можно задать ширину и высоту:</p>
       <h2 class="task task-1">task 3</h2>
       <h2 class="task task-1">task 3</h2>
@@ -115,6 +115,7 @@
       <h2 class="task task-3">task 3</h2>
       <h2 class="task task-3">task 3</h2>
       <h2 class="task task-3">task 3</h2>
+    <h3>Определите, к какой блочной модели относятся теги h3</h3>
 
     </div>
 
