--- a/dt/block-model-05/file/defining-a-block-tag-model-70.html
+++ b/dt/block-model-05/file/defining-a-block-tag-model-70.html
@@ -72,19 +72,20 @@
     <p class="task task-1">text</p>
 
     <h3>2. Определите, к какой блочной модели относятся теги b.</h3>
-    <p>2.1. Если строчному элементу задать ширину и высоту, то они не сработают. Ширина и высота строчных элементов
+      <p>2.1. Если строчному элементу задать ширину и высоту, то они не сработают. Ширина и высота строчных элементов
       зависят от содержимого.</p>
-    <p>2.2. Если расположить несколько строчных элементов рядом, то они выстроятся в ряд:</p>
-    <b class="task">text</b>
-    <b class="task">text text</b>
-    <b class="task">text text text</b>
-    <b class="task">text text text text</b>
-    <em>Пространство между элементами - пробелы(enter).</em>
-    <p>2.3. Если у строчных элементов нет содержимого, то он тоже схлопнется(border-left + border-right):</p>
-    <b class="task"></b>
+      <p>2.2. Если расположить несколько строчных элементов рядом, то они выстроятся в ряд:</p>
+      <b class="task">text</b>
+      <b class="task">text text</b>
+      <b class="task">text text text</b>
+      <b class="task">text text text text</b>
+      <em>Пространство между элементами - пробелы(enter).</em>
+      <p>2.3. Если у строчных элементов нет содержимого, то он тоже схлопнется(border-left + border-right):</p>
+      <b class="task"></b>
 
     <h3>3. Определите, к какой блочной модели относятся теги h2.</h3>
-
+  
+    <h3>5. Определите, к какой блочной модели относятся теги i.</h3>
   </div>
 </body>
 
