--- a/dt/block-model-05/file/defining-a-block-tag-model-70.html
+++ b/dt/block-model-05/file/defining-a-block-tag-model-70.html
@@ -114,7 +114,7 @@
     <h2 class="task task-3">task 3</h2>
     <h2 class="task task-3">task 3</h2>
 
-  <h3>Определите, к какой блочной модели относятся теги h3</h3>
+  <h3>4. Определите, к какой блочной модели относятся теги h3</h3>
 
   <h3>5. Определите, к какой блочной модели относятся теги i.</h3>
   
