--- a/dl/html-lesson3-src/2-div-span/index.html
+++ b/dl/html-lesson3-src/2-div-span/index.html
@@ -10,5 +10,13 @@
 	<div>Text 2</div>
 	<span>Text 3</span>
 	<span>Text 4</span>
+	<div><span>text</span></div>
+	<ul class="menu">
+		<li><a href="#">Item 1</a></li>
+		<li><a href="#">Item 2</a></li>
+		<li><a href="#">Item 3</a></li>
+		<li><a href="#">Item 4</a></li>
+		<li><a href="#">Item 5</a></li>
+	</ul>
 </body>
 </html>
