--- a/dt/layouts-09/file/simple-single-column-site-layouts.html
+++ b/dt/layouts-09/file/simple-single-column-site-layouts.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>site-109</title>
+  <link rel="stylesheet" href="../css/style-109.css" type="text/css" media="all" />
 </head>
 <body>
   <div id="wrapper">
