--- a/dt/layouts-09/file/simple-single-column-site-layouts.html
+++ b/dt/layouts-09/file/simple-single-column-site-layouts.html
@@ -17,7 +17,9 @@
       <a href="#">link text 5</a>
     </div>
     <div id="content">
-      
+      <h1>Простой одноколоночный макет</h1>
+      <p>text</p>
+      <p>text</p>
     </div>
   </div>
 </body>
