--- a/dt/layouts-09/file/simple-single-column-site-layouts.html
+++ b/dt/layouts-09/file/simple-single-column-site-layouts.html
@@ -11,7 +11,7 @@
   <div id="wrapper">
     <div id="menu">
       <a href="#">link text 1</a>
-      <a href="#">link text 2</a>
+      <a href="#" class="active">link text 2</a>
       <a href="#">link text 3</a>
       <a href="#">link text 4</a>
       <a href="#">link text 5</a>
