Дополнил inline-block-72.html и добавил ссылку в index-05.html

--- a/dt/block-model-05/file/inline-block-72.html
+++ b/dt/block-model-05/file/inline-block-72.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,11 @@
   <title>72. Строчно-блочные элементы.</title>
   <link rel="stylesheet" href="../css/inline-block-72.css">
 </head>
+
 <body>
+  <a href="../index-05.html">index-05(block-model)</a>
+  <h1>72. Строчно-блочные элементы.</h1>
+
   <p>1. Строчно-блочному элементу можно задать ширину и высоту, как блочному элементу.</p>
   <span class="width"></span>
 
@@ -21,7 +26,8 @@
   <span class="no-height">span inline-block no-height</span>
 
   <p>4. Если задать несколько строчно-блочных элементов, то они выстроятся как строчные</p>
-  <span class="multy">text</span><span class="multy">text</span><span class="multy">text</span><span class="multy">text</span><span class="multy">text</span>
+  <span class="multy">text</span><span class="multy">text</span><span class="multy">text</span><span
+    class="multy">text</span><span class="multy">text</span>
 
   <p>task 1</p>
   <p>Выстройте эти дивы в ряд, преобразовав их в строчно-блочные элементы.</p>
@@ -30,6 +36,7 @@
   <div class="elem">text</div>
   <div class="elem">text</div>
   <div class="elem">text</div>
-  
+
 </body>
+
 </html>
