--- a/dt/block-model-05/index-05.html
+++ b/dt/block-model-05/index-05.html
@@ -19,6 +19,7 @@
     <li><a href="file/features-of-block-elements-in-CSS-68.html">68. Особенности блочных элементов в CSS</a></li>
     <li><a href="file/features-of-lowercase-elements-in-CSS-69.html">69. Особенности строчных элементов в CSS</a></li>
     <li><a href="file/defining-a-block-tag-model-70.html">70. Определение блочной модели тегов</a></li>
+    <li><a href="file/inline-block-72.html">72. Строчно-блочные элементы</a></li>
     <li><a href="file/alignment-of-flex-elements-77.html">77. Выравнивание flex элементов</a></li>
   </ul>
 </body>
