Completed task 73(⋕mk.Pm.BM.BA )

--- a/dt/block-model-05/index-05.html
+++ b/dt/block-model-05/index-05.html
@@ -20,6 +20,7 @@
     <li><a href="file/features-of-lowercase-elements-in-CSS-69.html">69. Особенности строчных элементов в CSS</a></li>
     <li><a href="file/defining-a-block-tag-model-70.html">70. Определение блочной модели тегов</a></li>
     <li><a href="file/inline-block-72.html">72. Строчно-блочные элементы</a></li>
+    <li><a href="file/alignment-of-block-elements-73.html">73. Выравнивание блочных элементов на css</a></li>
     <li><a href="file/alignment-of-flex-elements-77.html">77. Выравнивание flex элементов</a></li>
   </ul>
 </body>
