--- a/mozilla/src/html-basic.html
+++ b/mozilla/src/html-basic.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="css/numbering.css" type="text/css">
 </head>
+
 <body>
   <h1>Основы HTML</h1>
   <ol>
@@ -31,55 +33,74 @@
   </p>
   <img src="images/element.png" alt="element">
   <ol>
-    <li>Открывающий тег (Opening tag): Состоит из имени элемента (в данном случае, "p"), заключённого в открывающие и закрывающие угловые скобки.  Открывающий тег указывает, где элемент начинается или начинает действовать, в данном случае — где начинается абзац.</li>
-    <li>Закрывающий тег (Closing tag): Это то же самое, что и открывающий тег, за исключением того, что он включает в себя косую черту перед именем элемента. Закрывающий элемент указывает, где элемент заканчивается, в данном случае — где заканчивается абзац. Отсутствие закрывающего тега является одной из наиболее распространённых ошибок начинающих и может приводить к странным результатам.</li>
+    <li>Открывающий тег (Opening tag): Состоит из имени элемента (в данном случае, "p"), заключённого в открывающие и
+      закрывающие угловые скобки. Открывающий тег указывает, где элемент начинается или начинает действовать, в данном
+      случае — где начинается абзац.</li>
+    <li>Закрывающий тег (Closing tag): Это то же самое, что и открывающий тег, за исключением того, что он включает в
+      себя косую черту перед именем элемента. Закрывающий элемент указывает, где элемент заканчивается, в данном случае
+      — где заканчивается абзац. Отсутствие закрывающего тега является одной из наиболее распространённых ошибок
+      начинающих и может приводить к странным результатам.</li>
     <li>Контент (Content): Это контент элемента, который в данном случае является просто текстом.</li>
     <li>Элемент(Element): Открывающий тег, закрывающий тег и контент вместе составляют элемент.</li>
   </ol>
   <p>
     Элементы также могут иметь атрибуты, которые выглядят так:
   </p>
-  <img class="attribute-png"src="images/attribute.png" alt="attribute">
+  <img class="attribute-png" src="images/attribute.png" alt="attribute">
   <p>
-    Атрибуты содержат дополнительную информацию об элементе, которую вы не хотите показывать в фактическом контенте. В данном случае, class это имя атрибута, а editor-note это значение атрибута. Класс позволяет дать элементу идентификационное имя, которое может позже использоваться, чтобы обращаться к элементу с информацией о стиле и прочих вещах.
+    Атрибуты содержат дополнительную информацию об элементе, которую вы не хотите показывать в фактическом контенте. В
+    данном случае, class это имя атрибута, а editor-note это значение атрибута. Класс позволяет дать элементу
+    идентификационное имя, которое может позже использоваться, чтобы обращаться к элементу с информацией о стиле и
+    прочих вещах.
   </p>
   <p>
     Атрибут всегда должен иметь:
   </p>
   <ol>
-    <li>Пробел между ним и именем элемента (или предыдущим атрибутом, если элемент уже имеет один или несколько атрибутов).</li>
+    <li>Пробел между ним и именем элемента (или предыдущим атрибутом, если элемент уже имеет один или несколько
+      атрибутов).</li>
     <li>Имя атрибута, за которым следует знак равенства.</li>
     <li>Значение атрибута, заключённое с двух сторон в кавычки.</li>
   </ol>
 
   <h2 id="nested-element"><a href="#nested-element">Вложенные элементы</a></h2>
   <p>
-    Вы также можете располагать элементы внутри других элементов — это называется вложением. Если мы хотим заявить, что наша кошка очень раздражена, мы можем заключить слово "очень" в элемент &lt;strong&gt; , который указывает, что слово должно быть сильно акцентированно:
+    Вы также можете располагать элементы внутри других элементов — это называется вложением. Если мы хотим заявить, что
+    наша кошка очень раздражена, мы можем заключить слово "очень" в элемент &lt;strong&gt; , который указывает, что
+    слово должно быть сильно акцентированно:
   </p>
   <pre>
     &lt;p&gt;>Моя кошка &lt;strong&gt;очень&lt;/strong&gt; раздражена.&lt;/p&gt;
   </pre>
   <p>
-    Вы, однако, должны убедиться, что ваши элементы правильно вложены: в примере выше мы открыли первым элемент &lt;p&gt;, затем элемент &lt;strong&gt;, потом мы должны закрыть сначала элемент &lt;/strong&gt;, затем &lt;p&gt;
+    Вы, однако, должны убедиться, что ваши элементы правильно вложены: в примере выше мы открыли первым элемент
+    &lt;p&gt;, затем элемент &lt;strong&gt;, потом мы должны закрыть сначала элемент &lt;/strong&gt;, затем &lt;p&gt;
   </p>
   <p>
-    Элементы должны открываться и закрываться правильно, поэтому они явно располагаются внутри или снаружи друг друга. Если они перекрываются, как в примере выше,  ваш веб-браузер будет пытаться сделать наилучшее предположение на основе того, что вы пытались сказать, что может привести к неожиданным результатам. Так что не стоит этого делать!
+    Элементы должны открываться и закрываться правильно, поэтому они явно располагаются внутри или снаружи друг друга.
+    Если они перекрываются, как в примере выше, ваш веб-браузер будет пытаться сделать наилучшее предположение на основе
+    того, что вы пытались сказать, что может привести к неожиданным результатам. Так что не стоит этого делать!
   </p>
 
   <h2 id="empty-elements"><a href="#empty-elements">Пустые элементы</a></h2>
   <p>
-    Некоторые элементы не имеют контента, и называются пустыми элементами. Возьмём  элемент &lt;img&gt;, который уже имеется в нашем HTML:
+    Некоторые элементы не имеют контента, и называются пустыми элементами. Возьмём элемент &lt;img&gt;, который уже
+    имеется в нашем HTML:
   </p>
   <pre>
     &lt;img src="images/firefox-icon.png" alt="Моё тестовое изображение"&gt;
   </pre>
   <p>
-    Он содержит два атрибута, но не имеет закрывающего тега &lt;/img&gt;, и никакого внутреннего контента. Это потому, что элемент изображения не оборачивает контент для влияния на него. Его целью является вставка изображения в HTML страницу в нужном месте.
+    Он содержит два атрибута, но не имеет закрывающего тега &lt;/img&gt;, и никакого внутреннего контента. Это потому,
+    что элемент изображения не оборачивает контент для влияния на него. Его целью является вставка изображения в HTML
+    страницу в нужном месте.
   </p>
 
   <h2 id="document-anatomy"><a href="#document-anatomy">Анатомия HTML документа</a></h2>
   <p>
-    Мы завершили изучение основ отдельных HTML элементов, но они не очень полезны сами по себе. Теперь мы посмотрим, как отдельные элементы объединяются в целую HTML страницу. Давайте вернёмся к коду, который мы записывали в наш index.html
+    Мы завершили изучение основ отдельных HTML элементов, но они не очень полезны сами по себе. Теперь мы посмотрим, как
+    отдельные элементы объединяются в целую HTML страницу. Давайте вернёмся к коду, который мы записывали в наш
+    index.html
   </p>
   <pre>
     &lt;!DOCTYPE html&gt;
@@ -94,12 +115,27 @@
     &lt;/html&gt;
   </pre>
   <ol>
-    <li>&lt;!DOCTYPE html&gt; — доктайп. В прошлом, когда HTML был молод (около 1991/1992), доктайпы должны были выступать в качестве ссылки на набор правил, которым HTML страница должна была следовать, чтобы считаться хорошим HTML, что могло означать автоматическую проверку ошибок и другие полезные вещи. Однако в наши дни, никто не заботится об этом, и они на самом деле просто исторический артефакт, который должен быть включён для того, что бы все работало правильно. На данный момент это все, что вам нужно знать.</li>
-    <li>&lt;html&gt;&lt;/html&gt; - Этот элемент оборачивает весь контент на всей странице, и иногда известен как корневой элемент.</li>
-    <li>&lt;head&gt;&lt;/head&gt; — Этот элемент выступает в качестве контейнера для всего, что вы пожелаете включить на HTML страницу, но не являющегося контентом, который вы показываете пользователям вашей страницы. К ним относятся такие вещи, как ключевые слова и описание страницы, которые будут появляться в результатах поиска, CSS стили нашего контента, кодировка и многое другое.</li>
-    <li>&lt;body&gt;&lt;/body&gt; — элемент &lt;body&gt;. В нем содержится весь контент, который вы хотите показывать пользователям, когда они посещают вашу страницу, будь то текст, изображения, видео, игры, проигрываемые аудиодорожки или что-то ещё.</li>
-    <li>&lt;meta charset="utf-8"&gt; — этот элемент устанавливает UTF-8 кодировку вашего документа, которая включает в себя большинство символов из всех известных человечеству языков. По сути, теперь документ может обрабатывать любой текстовый контент, который вы в него вложите. Нет причин не устанавливать её, так как это может помочь избежать некоторых проблем в дальнейшем.</li>
-    <li>&lt;title&gt;&lt;/title&gt; — элемент &lt;title&gt;. Этот элемент устанавливает заголовок для вашей страницы, который является названием, появляющимся на вкладке браузера загружаемой страницы, и используется для описания страницы, когда вы добавляете её в закладки/избранное.</li>
+    <li>&lt;!DOCTYPE html&gt; — доктайп. В прошлом, когда HTML был молод (около 1991/1992), доктайпы должны были
+      выступать в качестве ссылки на набор правил, которым HTML страница должна была следовать, чтобы считаться хорошим
+      HTML, что могло означать автоматическую проверку ошибок и другие полезные вещи. Однако в наши дни, никто не
+      заботится об этом, и они на самом деле просто исторический артефакт, который должен быть включён для того, что бы
+      все работало правильно. На данный момент это все, что вам нужно знать.</li>
+    <li>&lt;html&gt;&lt;/html&gt; - Этот элемент оборачивает весь контент на всей странице, и иногда известен как
+      корневой элемент.</li>
+    <li>&lt;head&gt;&lt;/head&gt; — Этот элемент выступает в качестве контейнера для всего, что вы пожелаете включить на
+      HTML страницу, но не являющегося контентом, который вы показываете пользователям вашей страницы. К ним относятся
+      такие вещи, как ключевые слова и описание страницы, которые будут появляться в результатах поиска, CSS стили
+      нашего контента, кодировка и многое другое.</li>
+    <li>&lt;body&gt;&lt;/body&gt; — элемент &lt;body&gt;. В нем содержится весь контент, который вы хотите показывать
+      пользователям, когда они посещают вашу страницу, будь то текст, изображения, видео, игры, проигрываемые
+      аудиодорожки или что-то ещё.</li>
+    <li>&lt;meta charset="utf-8"&gt; — этот элемент устанавливает UTF-8 кодировку вашего документа, которая включает в
+      себя большинство символов из всех известных человечеству языков. По сути, теперь документ может обрабатывать любой
+      текстовый контент, который вы в него вложите. Нет причин не устанавливать её, так как это может помочь избежать
+      некоторых проблем в дальнейшем.</li>
+    <li>&lt;title&gt;&lt;/title&gt; — элемент &lt;title&gt;. Этот элемент устанавливает заголовок для вашей страницы,
+      который является названием, появляющимся на вкладке браузера загружаемой страницы, и используется для описания
+      страницы, когда вы добавляете её в закладки/избранное.</li>
   </ol>
 
   <h2 id="images"><a href="#images">Изображения</a></h2>
@@ -107,32 +143,43 @@
     &lt;img src="images/firefox-icon.png" alt="Mоё тестовое изображение"&gt;
   </pre>
   <p>
-    Как было сказано раньше, код встраивает изображение на нашу страницу в нужном месте. Это делается с помощью атрибута src (source, источник), который содержит путь к нашему файлу изображения.
+    Как было сказано раньше, код встраивает изображение на нашу страницу в нужном месте. Это делается с помощью атрибута
+    src (source, источник), который содержит путь к нашему файлу изображения.
   </p>
   <p>
-    Мы также включили атрибут alt (alternative, альтернатива). В этом атрибуте, вы указываете поясняющий текст для пользователей, которые не могут увидеть изображение, возможно, по следующим причинам:
+    Мы также включили атрибут alt (alternative, альтернатива). В этом атрибуте, вы указываете поясняющий текст для
+    пользователей, которые не могут увидеть изображение, возможно, по следующим причинам:
   </p>
   <ol>
     <li>
-      У них присутствуют нарушения зрения. Пользователи со значительным нарушением зрения часто используют инструменты, называемые Screen Readers (экранные дикторы), которые читают для них альтернативный текст.
+      У них присутствуют нарушения зрения. Пользователи со значительным нарушением зрения часто используют инструменты,
+      называемые Screen Readers (экранные дикторы), которые читают для них альтернативный текст.
     </li>
     <li>
-      Что-то пошло не так, в результате чего изображение не отобразилось. Например, попробуйте намеренно изменить путь в вашем атрибуте src, сделав его неверным. Если вы сохраните и перезагрузите страницу, то вы должны увидеть что-то подобное вместо изображения:
+      Что-то пошло не так, в результате чего изображение не отобразилось. Например, попробуйте намеренно изменить путь в
+      вашем атрибуте src, сделав его неверным. Если вы сохраните и перезагрузите страницу, то вы должны увидеть что-то
+      подобное вместо изображения:
     </li>
   </ol>
   <img src="images/alt-text-example.png" alt="my test image">
   <!-- <img src="images/firefox.jpeg" alt="firefox.jpeg"> -->
   <p>
-    Альтернативный текст - это "пояснительный текст". Он должен предоставить читателю достаточно информации, чтобы иметь представление о том, что передаёт изображение. В этом примере наш текст "My test image" ("Моё тестовое изображение") не годится. Намного лучшей альтернативой для нашего логотипа Firefox будет "The Firefox logo: a flaming fox surrounding the Earth" ("Логотип Firefox: огненный Лис вокруг Земли").
+    Альтернативный текст - это "пояснительный текст". Он должен предоставить читателю достаточно информации, чтобы иметь
+    представление о том, что передаёт изображение. В этом примере наш текст "My test image" ("Моё тестовое изображение")
+    не годится. Намного лучшей альтернативой для нашего логотипа Firefox будет "The Firefox logo: a flaming fox
+    surrounding the Earth" ("Логотип Firefox: огненный Лис вокруг Земли").
   </p>
-  
+
   <h2 id="text-markup"><a href="#text-markup">Разметка текста</a></h2>
   <p>
     В этом разделе рассмотрим некоторые из основных HTML элементов, которые вы будете использовать для разметки текста.
   </p>
   <h3 id="headings"><a href="#headings">Заголовки</a></h3>
   <p>
-    Элементы заголовка позволяют вам указывать определённые части вашего контента в качестве заголовков или подзаголовков. Точно так же, как книга имеет название, названия глав и подзаголовков, HTML документ может содержать то же самое. HTML включает шесть уровней заголовков &lt;h1&gt; - &lt;h6&gt;, хотя обычно вы будете использовать не более 3-4 :
+    Элементы заголовка позволяют вам указывать определённые части вашего контента в качестве заголовков или
+    подзаголовков. Точно так же, как книга имеет название, названия глав и подзаголовков, HTML документ может содержать
+    то же самое. HTML включает шесть уровней заголовков &lt;h1&gt; - &lt;h6&gt;, хотя обычно вы будете использовать не
+    более 3-4 :
   </p>
   <pre>
     &lt;h1&gt;Мой главный заголовок&lt;/h1&gt;
@@ -143,20 +190,25 @@
 
   <h3 id="paragraphs"><a href="#paragraphs">Абзацы</a></h3>
   <p>
-    Как было сказано раньше, элемент <p> предназначен для абзацев текста; вы будете использовать их регулярно при разметке текстового контента:
+    Как было сказано раньше, элемент
+  <p> предназначен для абзацев текста; вы будете использовать их регулярно при разметке текстового контента:
   </p>
   &lt;p&gt;>Это одиночный абзац&lt;/p&gt;
 
   <h3 id="lists"><a href="#lists">Списки</a></h3>
   <p>
-    Большая часть веб-контента является списками и HTML имеет специальные элементы для них. Разметка списка всегда состоит по меньшей мере из двух элементов. Наиболее распространёнными типами списков являются нумерованные и ненумерованные списки:
+    Большая часть веб-контента является списками и HTML имеет специальные элементы для них. Разметка списка всегда
+    состоит по меньшей мере из двух элементов. Наиболее распространёнными типами списков являются нумерованные и
+    ненумерованные списки:
   </p>
   <ul>
     <li>
-      Ненумерованные списки - это списки, где порядок пунктов не имеет значения, как в списке покупок. Они оборачиваются в элемент &lt;ul&gt;.
+      Ненумерованные списки - это списки, где порядок пунктов не имеет значения, как в списке покупок. Они оборачиваются
+      в элемент &lt;ul&gt;.
     </li>
     <li>
-      Нумерованные списки - это списки, где порядок пунктов имеет значение, как в рецепте. Они оборачиваются в элемент &lt;ol&gt;.
+      Нумерованные списки - это списки, где порядок пунктов имеет значение, как в рецепте. Они оборачиваются в элемент
+      &lt;ol&gt;.
     </li>
   </ul>
   <p>
@@ -181,30 +233,37 @@
 
   <h2 id="links"><a href="#links">Ссылки</a></h2>
   <p>
-    Ссылки очень важны — это то, что делает Интернет Интернетом. Чтобы добавить ссылку, нам нужно использовать простой элемент — &lt;a&gt; — a это сокращение от "anchor" ("якорь"). Чтобы текст в вашем абзаце стал ссылкой, выполните следующие действия:
+    Ссылки очень важны — это то, что делает Интернет Интернетом. Чтобы добавить ссылку, нам нужно использовать простой
+    элемент — &lt;a&gt; — a это сокращение от "anchor" ("якорь"). Чтобы текст в вашем абзаце стал ссылкой, выполните
+    следующие действия:
   </p>
   <ol>
     <li>Выберите некоторый текст. Мы выбрали текст "Манифест Mozilla".</li>
     <li>
       Оберните текст в элемент &lt;a&gt;, например так:<br>
-        &lt;a&gt;>Манифест Mozilla&lt;/a&gt;
+      &lt;a&gt;>Манифест Mozilla&lt;/a&gt;
     </li>
     <li>
       Задайте элементу &lt;a&gt; атрибут href, например так:<br>
-        &lt;a&gt; href="">Манифест Mozilla&lt;/a&gt;
+      &lt;a&gt; href="">Манифест Mozilla&lt;/a&gt;
     </li>
     <li>
       Заполните значение этого атрибута веб-адресом, на который вы хотите указать ссылку:<br>
-       &lt;a&gt; href="https://www.mozilla.org/ru/about/manifesto/details/">Манифест Mozilla&lt;/a&gt;
+      &lt;a&gt; href="https://www.mozilla.org/ru/about/manifesto/details/">Манифест Mozilla&lt;/a&gt;
     </li>
   </ol>
   <p>
-    Вы можете получить неожиданные результаты, если в самом начале веб-адреса вы опустите https:// или http:// часть, называемую протоколом. После создания ссылки, кликните по ней, чтобы убедиться, что она направляет вас туда, куда вы хотели.
+    Вы можете получить неожиданные результаты, если в самом начале веб-адреса вы опустите https:// или http:// часть,
+    называемую протоколом. После создания ссылки, кликните по ней, чтобы убедиться, что она направляет вас туда, куда вы
+    хотели.
   </p>
   <p>
-    <em>href сначала может выглядеть довольно непонятым выбором для имени атрибута. Если у вас возникли проблемы с тем, чтобы запомнить его, можете запомнить, что атрибут href образуется как</em> <strong>hypertext reference</strong>("гипертекстовая ссылка").
+    <em>href сначала может выглядеть довольно непонятым выбором для имени атрибута. Если у вас возникли проблемы с тем,
+      чтобы запомнить его, можете запомнить, что атрибут href образуется как</em> <strong>hypertext
+      reference</strong>("гипертекстовая ссылка").
   </p>
 
   <img src="images/finished-test-page-small.png" alt="mozilla-finished-test">
 </body>
+
 </html>
