--- a/webref/list-style.html
+++ b/webref/list-style.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
- <head>
+
+<head>
   <meta charset="utf-8">
   <title>list-style</title>
   <style>
-   ul {
-    list-style: circle inside; /* Квадратные маркеры */
-    /* Маркеры размещаются за пределами текстового блока */
-   }
-   li{
-     background-color: yellowgreen;
-   }
+    ul {
+      list-style: circle inside;
+      /* Квадратные маркеры */
+      /* Маркеры размещаются за пределами текстового блока */
+    }
+
+    li {
+      background-color: yellowgreen;
+    }
   </style>
- </head> 
- <body> 
+</head>
+
+<body>
   <ul>
-   <li>Многомерный полином</li>
-   <li>Нормальный абсолютно сходящийся ряд</li>
-   <li>Интеграл от функции</li>
-   <li>Коллинеарный экстремум функции</li>
+    <li>Многомерный полином</li>
+    <li>Нормальный абсолютно сходящийся ряд</li>
+    <li>Интеграл от функции</li>
+    <li>Коллинеарный экстремум функции</li>
   </ul>
- </body>
+</body>
+
 </html>
