--- a/dt/flex-08/file/issue-99.html
+++ b/dt/flex-08/file/issue-99.html
@@ -1,1 +1,36 @@
-
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>08. flex-direction(issue-99)</title>
+  <style type="text/css" media="all">
+    .parent{
+      display: flex;
+      /*flex-direction: row;*/
+      /*flex-direction: row-reverse;*/
+      flex-direction: column;
+      /*flex-direction: column-reverse;*/
+      width: 300px;
+      height: 200px;
+      border: 2px solid red;
+    }
+    .child {
+      /*width: 30px;*/
+      /*height: 30px;*/
+      border: 2px solid grey;
+    }
+  </style>
+</head>
+<body>
+  <h1>размещение флекс элементов в ряд или колонку</h1>
+  <div class="parent">
+    <div class="child">1111111</div>
+    <div class="child">2222222</div>
+    <div class="child">3333333</div>
+    <div class="child">4444444</div>
+    <div class="child">5555555</div>
+  </div>
+</body>
+</html>
