--- a/example/sticky-footer.html
+++ b/example/sticky-footer.html
@@ -1,1 +1,61 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>sticky footer</title>
+  <style>
+    html {
+      height: 100%;
+    }
+
+    body {
+      margin: 0;
+      height: 100%;
+      outline: 5px solid #ff0000;
+      outline-offset: -5px;
+    }
+
+    .wrapper {
+      min-height: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+/* 
+    .page-header {
+      flex-shrink: 0;
+      outline: 5px solid #00ff00;
+    }
+*/
+/* 
+    .page-footer {
+      flex-shrink: 0;
+      outline: 5px solid #0000ff;
+    }
+ */
+    .page-body {
+      flex-grow: 1;
+      outline: 5px solid #000000;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="wrapper">
+    <a href="https://developer.mozilla.org/ru/docs/Web/CSS/Layout_cookbook/Sticky_footers" title="mdn firefox">MDN
+      sticky-footers</a>
+    <header class="page-header">
+      Это header
+    </header>
+    <main class="page-body">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </main>
+    <footer class="page-footer">
+      это footer
+    </footer>
+  </div>
+</body>
+
+</html>
